public/stylesheets/timeline.css
.red {background:red}
.blue {background:blue}
.green {background:green}

.clear {clear:both}

.spacer {
  display:block;
  height:50px;
  width:100%;
}

.timeline {
  background:url(../images/timeline.png);
  display:block;
  height:100px;
  position:relative;
  margin-bottom:20px;
  margin-top: 15px;
  width:865px;
  z-index:9999;
}

.unit_container {
  bottom:31px;
  display:block;
  left:0;
  height:76px;
  position:absolute;
  width:100%;
  z-index: 20;
}

body .unit {
  cursor:pointer;
  display:inline-block;
  height:30px;
  position:absolute;
  bottom: 0;
}

.unit.ui-draggable-dragging {
  z-index:99999;
}

.unit.blackout, .unit.admin {
  display:inline-block;
  height:71px;
  opacity:0.5;
  position:absolute;
  top:0px;
  width:110px;
  z-index: 10;
  border-radius: 5px 5px 0 0;
}

.blackout {
  background:#ccc;
  border-top:5px solid #000;
}

.unit.admin {
  background: #ECC;
  border-top:5px solid #F00;
}

.invalid {
  background:url(../images/bg-conflict.jpg) top left repeat-x !important;
  height:30px;
}

.unit.status_new {
  background-color: #3a7e31;
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(58, 126, 49)), to(rgb(92, 154, 91)));
  background-image: -webkit-linear-gradient(top, rgb(58, 126, 49), rgb(92, 154, 91));
  background-image: -moz-linear-gradient(top, rgb(58, 126, 49), rgb(92, 154, 91));
  background-image: -o-linear-gradient(top, rgb(58, 126, 49), rgb(92, 154, 91));
  background-image: -ms-linear-gradient(top, rgb(58, 126, 49), rgb(92, 154, 91));
  background-image: linear-gradient(top, rgb(58, 126, 49), rgb(92, 154, 91));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#3a7e31', EndColorStr='#5c9a5b');
  border-right: 1px solid #5c9a5b;
}

.unit.status_cancelled {
  background-color: #772311;
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(119, 35, 17)), to(rgb(165, 52, 27)));
  background-image: -webkit-linear-gradient(top, rgb(119, 35, 17), rgb(165, 52, 27));
  background-image: -moz-linear-gradient(top, rgb(119, 35, 17), rgb(165, 52, 27));
  background-image: -o-linear-gradient(top, rgb(119, 35, 17), rgb(165, 52, 27));
  background-image: -ms-linear-gradient(top, rgb(119, 35, 17), rgb(165, 52, 27));
  background-image: linear-gradient(top, rgb(119, 35, 17), rgb(165, 52, 27));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#772311', EndColorStr='#a5341b');
  border-right: 1px solid #a5341b;

}

.unit.status_complete {
  background-color: #3a6d88;
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(58, 109, 136)), to(rgb(92, 133, 155)));
  background-image: -webkit-linear-gradient(top, rgb(58, 109, 136), rgb(92, 133, 155));
  background-image: -moz-linear-gradient(top, rgb(58, 109, 136), rgb(92, 133, 155));
  background-image: -o-linear-gradient(top, rgb(58, 109, 136), rgb(92, 133, 155));
  background-image: -ms-linear-gradient(top, rgb(58, 109, 136), rgb(92, 133, 155));
  background-image: linear-gradient(top, rgb(58, 109, 136), rgb(92, 133, 155));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#3a6d88', EndColorStr='#5c859b');
  border-right: #5c859b;
}

.time {
  background:#3e3ede;
  border-radius:6px;
  display:inline-block;
  height:110px;
  opacity:.05;
  position:relative;
  top:-9px;
  width:35px;
  z-index: 0;
}

.tooltip_reservation {
  display: none;
}

.time.hour_0 { left:-16px}
.time.hour_1 { left:19px}
.time.hour_2 { left:55px}
.time.hour_3 { left:91px}
.time.hour_4 { left:127px}
.time.hour_5 { left:163px}
.time.hour_6 { left:199px}
.time.hour_7 { left:235px}
.time.hour_8 { left:271px}
.time.hour_9 { left:307px}
.time.hour_10 { left:374px}
.time.hour_11 { left:379px}
.time.hour_12 { left:415px}
.time.hour_13 { left:451px}
.time.hour_14 { left:487px}
.time.hour_15 { left:523px}
.time.hour_16 { left:559px}
.time.hour_17 { left:595px}
.time.hour_18 { left:631px}
.time.hour_19 { left:667px}
.time.hour_20 { left:707px}
.time.hour_21 { left:739px}
.time.hour_22 { left:775px}
.time.hour_23 { left:811px}

